add user alerts to main page

--- a/CAFFStoreProject/frontend/caff-store/src/app/component/main/main.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/main/main.component.html
@@ -10,7 +10,7 @@
             </ng-template>
         </ngx-file-drop>
         <div class="uploadBtn">
-            <button mat-raised-button color="primary" (click)="uploadCaff()">Upload</button>
+            <button mat-raised-button color="primary" (click)="uploadCaff()"  [disabled]="!isUploading">Upload</button>
         </div>
         <br>
         <br>
