--- a/CAFFStoreProject/frontend/caff-store/src/app/component/profile/profile.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/profile/profile.component.html
@@ -17,19 +17,21 @@
             </div>
         </div>
     </form>
-    <h2 class="align-center pt-3">Comments</h2>
-    <div class="example-full-width">
-        <mat-list role="list" *ngFor="let comment of comments">
-            <mat-list-item role="listitem" appearance="outline">{{ comment }}</mat-list-item>
-            <mat-divider></mat-divider>
-        </mat-list>
-    </div>
-    <h2 class="align-center pt-3">Uploaded files</h2>
-    <div class="example-full-width">
-        <mat-action-list role="list" *ngFor="let caff of caffFiles">
-            <button mat-list-item role="listitem" (click)="navigateToDetails(caff.id)">
-                {{ caff.originalFileName }}
-            </button>
-        </mat-action-list>
+    <div *ngIf="!isAdmin">
+        <h2 class="align-center pt-3">Comments</h2>
+        <div class="example-full-width">
+            <mat-list role="list" *ngFor="let comment of comments">
+                <mat-list-item role="listitem" appearance="outline">{{ comment }}</mat-list-item>
+                <mat-divider></mat-divider>
+            </mat-list>
+        </div>
+        <h2 class="align-center pt-3">Uploaded files</h2>
+        <div class="example-full-width">
+            <mat-action-list role="list" *ngFor="let caff of caffFiles">
+                <button mat-list-item role="listitem" (click)="navigateToDetails(caff.id)">
+                    {{ caff.originalFileName }}
+                </button>
+            </mat-action-list>
+        </div>
     </div>
 </div>
